<resources>
    <string name="app_name">Electronics Device Sale</string>
    <string name="tile_login">Login</string>
    <string name="textview">TextView</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_register">Register</string>
    <string name="confirm_password">Confirm</string>
    <string name="button">Button</string>
    <string name="title_activity_list_product">ListProduct</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="s_n_ph_m_m_i">Sản phẩm mới</string>
    <string name="home">Home</string>
    <string name="txt_id">ID</string>
    <string name="txt_name">Name</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_price">Price</string>
    <string name="image">Image</string>
    <string name="ET_ID">ID</string>
    <string name="ET_Name">Name</string>
    <string name="ET_Quantity">Quantity</string>
    <string name="ET_Price">Price</string>
    <string name="Bt_Upload">Upload Image</string>
    <string name="AddProduct">Add</string>
    <string name="todo">TODO</string>
    <string name="cart">Cart</string>
    <string name="listproduct">ListProduct</string>
    <string name="role">Role</string>
    <string name="id">ID</string>
    <string name="ET_Description">Description</string>
</resources>