<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_manage"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#EC94C9"
            app:title="Manage">

        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_home_screen"
                android:backgroundTint="#EF0E0E"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/home" />

            <Button
                android:id="@+id/btn_cart"
                android:backgroundTint="#D15D03"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/cart" />


            <Button
                android:id="@+id/btn_sign_up"
                android:backgroundTint="#C8C23F"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="ListAccount" />


            <Button
                android:id="@+id/btn_listproduct1"
                android:backgroundTint="#4591E3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/listproduct" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>